# CondomUAU

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file_name_list.txt  pyproject.toml  starter.py
SUB_EMB/contestazione_pec/: chroma.sqlite3
SUB_EMB/ricorso_GDP_PISA/: chroma.sqlite3
app/: main.py  rag.py
app/pages/: form.py  rag.py  rag_multi.py
