[tool.poetry]
name = "amm-cond-proj"
version = "0.1.0"
description = ""
authors = ["Angelo Schepis <angelo.schepis.as@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
streamlit-pdf-viewer = "^0.0.12"
llama-index-llms-ollama = "^0.1.5"
llama-index-core = "^0.10.53.post1"
llama-index-readers-file = "^0.1.29"
llama-index-embeddings-ollama = "^0.1.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
