[tool.poetry]
name = "amm-cond-proj"
version = "0.1.0"
description = ""
authors = ["Angelo Schepis <angelo.schepis.as@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
streamlit-pdf-viewer = "^0.0.14"
pymupdf = "^1.24.7"
faiss-cpu = "^1.8.0.post1"
chromadb = "^0.5.4"
pypdf2 = "^3.0.1"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
